kubernetes/apps/default/envoy-gateway/resources/http-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "*.chillincool.net"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
